C/examples/pracc/good/makefile.unx
#-----------------------------------------------#
#	Makefile for unix systems		#
#    using a GNU C compiler			#
#-----------------------------------------------#
CC=cc
CFLAGS=-g 
#
# Compiler flags:
#	-g	-- Enable debugging

good: good.c
	$(CC) $(CFLAGS) -o good good.c

clean:
	rm -f good 
