C/examples/pracc/bad/makefile.unx
#-----------------------------------------------#
#	Makefile for unix systems		#
#    using a GNU C compiler			#
#-----------------------------------------------#
CC=cc
CFLAGS=-g 
#
# Compiler flags:
#	-g	-- Enable debugging

bad: bad.c
	$(CC) $(CFLAGS) -o bad bad.c

clean:
	rm -f bad 
